<resources>
    <string name="app_name">EstambreApp</string>
    <string name="super_juegos">Super Juegos</string>
    <string name="mindfulness">mindfulness</string>
    <string name="activities">activities</string>
    <string name="exit">exit</string>
    <string name="atras">atras</string>
    <string name="siguiente">siguiente</string>
    <string name="jugar">jugar</string>
    <string name="menu_juegos">menu juegos</string>
    <string name="todo">TODO</string>
    <string name="home">home</string>
    <string name="nextgame">nextGame</string>
    <string name="repetir">repetir</string>
    <string name="encuentra_las_im_genes_que_no_se_repiten">Encuentra las imágenes que NO se repiten</string>
    <string name="nextsong">nextSong</string>
    <string name="presong">preSong</string>
    <string name="pause">pause</string>
    <string name="sigue_a_la_oveja_negra">Sigue a la oveja Negra</string>
    <string name="mezclando">mezclando...</string>
    <string name="encuentra_la_salida">Encuentra la salida</string>
    <string name="button_to_go_down_on_maze">Button to go down on maze</string>
    <string name="button_to_go_right_on_maze">Button to go right on maze</string>
    <string name="button_to_go_left_on_maze">Button to go left on maze</string>
    <string name="button_to_go_up_on_maze">Button to go up on maze</string>
    <string name="exitgame">ExitGame</string>
    <string name="elije_tu_favorito">Elije tu favorito!!!</string>
    <string name="start">start</string>
    <string name="score_0">score 0</string>
    <string name="textview" />
    <string name="ordenes_5">Ordenes: 5</string>
    <string name="observa_cuidadosamente_la_secuencia_que_sim_n_dice">Observa cuidadosamente la secuencia que simón dice...</string>
    <string name="load">load</string>
    <string name="regresar">regresar</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
</resources>