<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a63d40"
    android:backgroundTint="#A63D40"
    tools:context=".SimonSaysActivity">


    <nl.dionsegijn.konfetti.KonfettiView
        android:id="@+id/viewKonfetti2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/scoreLbl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/ordenes_5"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

    <TextView
        android:id="@+id/instructionsText"
        android:layout_width="364dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/observa_cuidadosamente_la_secuencia_que_sim_n_dice"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scoreLbl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/imageButton20"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/regresar"
        android:onClick="exit"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scoreLbl"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/scoreLbl"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:srcCompat="@drawable/white_arrow" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/viewKonfetti2"
        app:layout_constraintStart_toStartOf="@+id/viewKonfetti2"
        app:layout_constraintTop_toBottomOf="@+id/scoreLbl">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/blueBtn"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="#3F51B5"
                android:contentDescription="@string/_1"
                android:onClick="onTap"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/greenBtn"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="#4CAF50"
                android:contentDescription="@string/_3"
                android:onClick="onTap"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/yellowBtn"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="#FFC107"
                android:contentDescription="@string/_2"
                android:onClick="onTap"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/purpleBtn"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="#C134E1"
                android:contentDescription="@string/_0"
                android:onClick="onTap"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>

    </TableLayout>

    <ImageButton
        android:id="@+id/startBtn"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/start"
        android:onClick="startGame"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreLbl"
        app:layout_constraintVertical_bias="0.923"
        app:srcCompat="@drawable/play"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>