<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C2F784"
    tools:context=".GamesHomeActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="353dp"
        android:layout_height="496dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/minijuegos" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/home"
        android:onClick="moveHome"
        android:rotation="90"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/arrow"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="290dp"
        android:layout_height="120dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/jugar"
        android:onClick="startGames"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775"
        app:srcCompat="@drawable/jugar"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="290dp"
        android:layout_height="120dp"
        android:contentDescription="@string/menu_juegos"
        android:onClick="moveMenuGames"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7"
        app:srcCompat="@drawable/play"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>