<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5EAEA"
    tools:context=".MindfulnessActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="301dp"
        android:layout_height="662dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.203"
        app:srcCompat="@drawable/mindfulness"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/border_rosa"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="124dp"
        android:layout_height="116dp"
        android:layout_marginStart="304dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/activities"
        android:onClick="moveActivities"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541"
        app:srcCompat="@drawable/next_boton"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/home"
        android:onClick="moveHome"
        android:rotation="90"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@drawable/arrow"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton15"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/presong"
        android:onClick="pressPlayBack"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959"
        app:srcCompat="@drawable/pre_song" />

    <ImageButton
        android:id="@+id/imageButton14"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/nextsong"
        android:onClick="pressPlayNext"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959"
        app:srcCompat="@drawable/next_song" />

    <ImageButton
        android:id="@+id/imageButton16"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/pause"
        android:onClick="pressPausePlay"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988"
        app:srcCompat="@drawable/pause"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>